--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1> Etch A Sketch</h1>
 
     <div class = "container"></div>
+
+    <button>change the number of pixels</button>
+    <div class = "error"></div>
     
 </body>
 </html>
